Force rotate on mobile

--- a/website/style.css
+++ b/website/style.css
@@ -59,3 +59,12 @@ canvas {
     from {opacity: 0;}
     to {opacity: 1;}
   }
+
+#pleaserotate-graphic{
+    fill: #fff;
+}
+
+#pleaserotate-backdrop {
+    color: #fff;
+    background-color: #000;
+}
